Push changes of last days

--- a/lang/de.json
+++ b/lang/de.json
@@ -41,7 +41,7 @@
     "Button.Add": "Hinzufügen",
     "Button.Change": "Übernehmen",
     "Button.Edit": "Bearbeiten",
-    "Button.Back": "Zum Switch",
+    "Button.Back": "Zurück zu :device",
     "Button.Sync": "Synchronisieren",
     "Button.Start": "Ausführen",
     "Button.Close": "Schließen",
@@ -219,8 +219,8 @@
     "Msg.RoomDeleted": "Raum erfolgreich gelöscht",
     "Msg.VlanBulkUpdated": "Massenbearbeitung durchgeführt",
     "Msg.ApiLoginFailed": "Anmeldung an der API fehlgeschlagen",
-    "Msg.ApiPortNameSet": "Portname erfolgreich gesetzt",
-    "Msg.ApiPortNameNotSet": "Portname konnte nicht gesetzt werden",
+    "Msg.ApiPortNameSet": "Beschreibung von Port :port geändert!",
+    "Msg.ApiPortNameSetError": "Beschreibung von Port :port konnte nicht geändert werden!",
     "Msg.RefreshedDevice": "Switch erfolgreich aktualisiert",
     "Msg.FailedToRefreshDevice": "Switch konnte nicht aktualisiert werden",
     "Msg.SubmitWait": "Aktion wird ausgeführt. Bitte warten...",
@@ -259,7 +259,7 @@
     "Vlan.Update.Tagging.Success": ":success von :total VLANs auf Port :port aktualisiert",
     "Vlan.Update.Error": ":failed von :total Ports konnten nicht aktualisiert werden",
     "Vlan.Update.Error.Untagged": "Fehler: VLAN :vlan konnte auf Port :port nicht ohne Tag eingerichtet werden",
-    "Vlan.Update.Error.Tagged": "Fehler: VLAN :vlan konnte auf Port :port nicht mit Tag eingerichtet werden",
+    "Vlan.Update.Error.Tagged": ":success von :total Aktionen auf Port :port konnten durchgeführt werden",
     "Vlan.Update.Success.Tagged": "VLAN :vlan erfolgreich auf Port :port mit Tag eingerichtet",
     "Vlan.Update.Success.TaggedAll": "Alle VLANs erfolgreich auf Port :port mit Tag eingerichtet",
     "Vlan.Update.Success.Remove.Tagged": "VLAN :vlan erfolgreich von Port :port entfernt",
@@ -270,6 +270,16 @@
     "Vlan.Sync": "Synchronisieren",
     "Vlan.Edit": "VLAN bearbeiten",
     "Vlan.Sync.Expected.NotRenamed": "- Nicht umbenannt (VLAN 1 cannot be renamed)",
+
+
+    "Log.Vlan.Tagged.Updated": "VLAN :vlan auf Port :port mit Tag eingerichtet",
+    "Log.Vlan.Tagged.Removed": "VLAN :vlan von Port :port entfernt",
+    "Log.Vlan.Untagged.Updated": "VLAN :vlan auf Port :port ohne Tag eingerichtet",
+    "Log.Vlan.Untagged.Removed": "VLAN :vlan von Port :port entfernt",
+    "Log.Vlan.Tagged.NotUpdated": "VLAN :vlan konnte nicht auf Port :port mit Tag eingerichtet werden",
+    "Log.Vlan.Untagged.NotUpdated": "VLAN :vlan konnte nicht auf Port :port ohne Tag eingerichtet werden",
+    "Log.Port.Name.Updated": "Beschreibung von Port :port auf :name geändert",
+    "Log.Port.Name.UpdatedFailed": "Beschreibung von Port :port auf :name konnte nicht geändert werden",
 
     "Pubkeys.Sync.Success": "Öffentliche Schlüssel erfolgreich synchronisiert",
     "Pubkeys.Sync.NotEnough": "Mindestens 2 Schlüssel müssen vorhanden sein"
