--- a/lang/en.json
+++ b/lang/en.json
@@ -19,7 +19,7 @@
     "GUI_External": "Open Switch in new Tab",
     "Show": "Show more",
     "Switch.Edit.Hint": "Edit Switch",
-    "Portstats.for": "Statistics for Port ",
+    "Portstats.for": "Information and statistics",
     "Button.CreateBackup": "Create Backup",
     "Button.SyncVlans": "Sync VLANs",
     "Button.SyncPubkeys": "Sync Public Keys",
