--- a/lang/de.json
+++ b/lang/de.json
@@ -76,9 +76,9 @@
     "Switch.Password": "API Passwort",
     "Switch.Live.Portoverview": "Portübersicht",
     "Switch.Live.Members": "Mitglieder (Ports)",
-    "Switch.Live.LastUpdate": "Aktualisiert",
-    "Switch.Live.TrunkSummary": "TRUNKS INSGESAMT",
-    "Switch.Live.VlanSummary": "VLANS INSGESAMT",
+    "Switch.Live.LastUpdate": "Letze Verbindung",
+    "Switch.Live.UplinkSummary": "UPLINKS",
+    "Switch.Live.VlanSummary": "VLANS",
     "Switch.Live.Serialnumber": "Seriennummer",
     "Switch.Live.Portname": "Beschreibung",
     "Switch.Live.NoTrunksFound": "Keine Uplinks gefunden",
@@ -94,12 +94,12 @@
     "Switch.SSH.Execute.Desc": "Soll der Befehl wirklich ausgeführt werden?",
     "Switch.Edit.Hint": "Switch bearbeiten",
     
-    "Switch.NoFound": "Kein Switch gefunden :(",
-    "Vlan.NoFound": "Kein VLAN gefunden :(",
-    "Clients.NoFound": "Keine Endgeräte gefunden :(",
-    "No rooms found": "Keine Räume gefunden :(",
-    "No buildings found": "Keine Gebäude gefunden :(",
-    "No locations found": "Keine Standorte gefunden :(",
+    "Switch.NoFound": "Es wurde noch kein Switch erstellt.",
+    "Vlan.NoFound": "Keine VLANs vorhanden.",
+    "Clients.NoFound": "Keine Endgeräte gefunden.",
+    "No rooms found": "Keine Räume gefunden.",
+    "No buildings found": "Keine Gebäude gefunden.",
+    "No locations found": "Keine Standorte gefunden.",
 
     "GUI_External": "Switch in neuen Tab öffnen",
     "Hint.Edit": "Bearbeiten",
@@ -144,16 +144,16 @@
     "Menu.Uplinks": "Uplinks",
     "Menu.Execute": "SSH ausführen",
     "Menu.Log": "Logs",
-    "Menu.Label.Management": "Verwaltung",
-    "Menu.Label.User": "Benutzer",
-    "Menu.Label.Action": "Aktionen",
-    "Menu.Label.System": "System",
-    "Menu.Label.Data": "Daten",
+    "Management": "Verwaltung",
+    "User": "Benutzer",
+    "Action": "Aktionen",
+    "System": "System",
+    "Usersettings": "Benutzereinstellungen",
 
     "Header.Vlans": "VLANs",
     "Header.Switches": "Switche",
     "Header.Log": "Log",
-    "Header.Locations": "Standorte",
+    "Sites": "Standorte",
     "Header.Buildings": "Gebäude",
     "Header.Rooms": "Räume",
     "Header.System": "Systemeinstellungen",
@@ -203,7 +203,7 @@
     "Msg.SwitchDeleted": "Switch erfolgreich gelöscht",
     "Msg.VlanCreated": "VLAN erfolgreich erstellt",
     "Msg.VlanUpdated": "VLAN erfolgreich aktualisiert",
-    "Msg.VlanDeleted": "VLAN erfolgreich gelöscht",
+    "Msg.DeleteVland": "VLAN erfolgreich gelöscht",
     "Msg.BackupCreated": "Backup erfolgreich erstellt",
     "Msg.BackupDeleted": "Backup erfolgreich gelöscht",
     "Msg.BackupRestored": "Backup erfolgreich wiederhergestellt",
@@ -241,6 +241,7 @@
     "Msg.RouterCreated": "Router erfolgreich erstellt",
     "Msg.RouterUpdated": "Router erfolgreich aktualisiert",
     "Msg.RouterDeleted": "Router erfolgreich gelöscht",
+    "Msg.MacTypeAdded": "MAC-Typ erfolgreich hinzugefügt",
 
     "edit": "bearbeiten",
     
