--- a/lang/en.json
+++ b/lang/en.json
@@ -121,7 +121,7 @@
     "Switch.Live.Portoverview": "Port Overview",
     "Switch.Live.Members": "Members (Ports)",
     "Switch.Live.LastUpdate": "Last Update",
-    "Switch.Live.TrunkSummary": "TOTAL TRUNKS",
+    "Switch.Live.UplinkSummary": "TOTAL TRUNKS",
     "Switch.Live.VlanSummary": "TOTAL VLANS",
     "Switch.Live.Serialnumber": "Serial Number",
     "Switch.Live.Portname": "Description",
@@ -146,7 +146,7 @@
     "Msg.SwitchDeleted": "Switch successfully deleted",
     "Msg.VlanCreated": "VLAN successfully created",
     "Msg.VlanUpdated": "VLAN successfully updated",
-    "Msg.VlanDeleted": "VLAN successfully deleted",
+    "Msg.DeleteVland": "VLAN successfully deleted",
     "Msg.BackupDeleted": "Backup successfully deleted",
     "Msg.BackupRestored": "Backup successfully restored",
     "Msg.UplinkUpdated": "Uplinks successfully updated",
