--- a/lang/de.json
+++ b/lang/de.json
@@ -36,7 +36,7 @@
 
     "Button.Delete": "Löschen",
     "Button.Save": "Speichern",
-    "Button.Create": "Erstellen",
+    "Button.Create": "Neu",
     "Button.Cancel": "Abbrechen",
     "Button.Add": "Hinzufügen",
     "Button.Change": "Übernehmen",
@@ -62,13 +62,13 @@
     "Switch.Edit.Title": "Switch bearbeiten",
     "Switch.Create.Title": "Switch erstellen",
     "Switch.Location": "Standort",
-    "Switch.Sync.Title": "Synchronisieren",
+    "Switch.Sync.Title": "Alle VLANs synchronisieren",
     "Switch.Sync.ShowResults": "Ergebnis anzeigen",
-    "Switch.Sync.CreateVlans": "VLAN erstellen, falls nicht vorhanden",
+    "Switch.Sync.CreateVlans": "VLAN erstellen, sofern nicht vorhanden",
     "Switch.Sync.OverwriteName": "VLAN Namen überschreiben",
     "Switch.Sync.TestMode": "Testmodus",
     "Switch.Sync.Text": "Hiermit werden die in der Datenbank hinterlegten VLANs auf die Switche übertragen. Bitte wähle die gewünschten Optionen aus.",
-    "Switch.Pubkey.Title": "Öffentliche Schlüssel abgleichen",
+    "Switch.Pubkey.Title": "Öffentliche Schlüssel synchronisieren",
     "Switch.Pubkey.FollowingKeys": "Folgende Schlüssel werden abgeglichen",
     "Switch.Uplink.Title": "Uplink-Ports",
     "Switch.IP": "Hostname/IP",
@@ -113,6 +113,7 @@
     "Setup.Privatekey.SSH": "Privatekey für SSH hochladen",
     "Uplinks found": "Gefundene Uplinks",
     "Custom Uplinks": "Benutzerdefinierte Uplinks",
+    "Switch.Pubkey.NoKeys": "Es sind keine öffentlichen Schlüssel vorhanden.",
 
     "RX": "Empfangen",
     "TX": "Gesendet",
@@ -285,7 +286,7 @@
     "Vlan.Subnet": "IP-Bereich",
     "Vlan.Scan": "NMAP-Scan",
     "Vlan.IsClientVlan": "Dieses VLAN im Endgerätescan nicht berücksichtigen",
-    "Vlan.Sync": "Synchronisieren",
+    "Vlan.Sync": "VLAN synchronisieren",
     "Vlan.Edit": "VLAN bearbeiten",
     "Vlan.Sync.Expected.NotRenamed": "- Nicht umbenannt (VLAN 1 cannot be renamed)",
     "Sync.Start": "Synchronisation starten",
