--- a/lang/en.json
+++ b/lang/en.json
@@ -39,7 +39,7 @@
     "Menu.Logout": "Logout",
     "Menu.Usersettings": "Customize",
     "Menu.Backups": "Backups",
-    "Menu.Locations": "Locations",
+    "Menu.Site": "Site",
     "Menu.Trunks": "Trunks",
     "Menu.Uplinks": "Uplinks",
     "Menu.Execute": "Run SSH",
@@ -53,7 +53,7 @@
     "Header.Vlans": "VLANs",
     "Header.Switches": "Switches",
     "Header.Log": "Log",
-    "Header.Locations": "Locations",
+    "Header.Site": "Site",
     "Header.System": "User Management",
     "Header.Backups": "Backups from ",
     "Header.Backup": "Backups",
