Optimize livewire compon., cleanup livewire routes

--- a/lang/de.json
+++ b/lang/de.json
@@ -197,6 +197,7 @@
     "Backup.Last": "Letztes Backup",
     "Backup.Restore.SwitchPassword": "Passwort vom Switch",
     "Backup.Restore.Title": "Backup wiederherstellen",
+    "Backup.NotAvailable": "Read-only switch",
 
     "Msg.SwitchCreated": "Switch erfolgreich erstellt",
     "Msg.SwitchUpdated": "Switch erfolgreich aktualisiert",
