Change web routes /device /devices

--- a/lang/de.json
+++ b/lang/de.json
@@ -118,6 +118,7 @@
     "TX": "Gesendet",
     "Change site": "Standort",
     "All Backups": "Alle Backups",
+    "Summary": "Zusammenfassung",
 
     "Role.SuperAdmin": "Super-Admin",
     "Role.Admin": "Administrator",
