Lint & Site seperate permissions

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,4 +1,5 @@
 {
+    "auth.failed": "Benutzername oder Kennwort falsch.",
     "Delete.Room": "Raum löschen",
     "Delete.Location": "Standort löschen",
     "Delete.Vlan": "VLAN löschen",
@@ -66,7 +67,7 @@
     "Switch.Sync.CreateVlans": "VLAN erstellen, sofern nicht vorhanden",
     "Switch.Sync.OverwriteName": "VLAN Namen überschreiben",
     "Switch.Sync.TestMode": "Testmodus",
-    "Switch.Sync.Text": "Hiermit werden die in der Datenbank hinterlegten VLANs auf die Switche übertragen. Bitte wähle die gewünschten Optionen aus.",
+    "Switch.Sync.Text": "Hiermit werden die in der Datenbank hinterlegten VLANs auf die Switches übertragen. Bitte wähle die gewünschten Optionen aus.",
     "Switch.Pubkey.Title": "Öffentliche Schlüssel synchronisieren",
     "Switch.Pubkey.FollowingKeys": "Folgende Schlüssel werden abgeglichen",
     "Switch.Uplink.Title": "Uplink-Ports",
@@ -86,7 +87,7 @@
     "Switch.Sync.TaggedVlans": "VLANs auf Uplinks taggen",
     "Switch.SSH.SelectSwitch": "Switch auswählen",
     "Switch.SSH.ByLocation": "Nach Standort",
-    "Switch.SSH.AllSwitches": "Alle Switches",
+    "Text.AllSwitches": "Alle Switches",
     "Switch.SSH.FastCmd": "Schnellkommando",
     "Switch.SSH.Info": "Bitte beachte, dass eingegebene Befehle nicht überprüft werden.",
     "Switch.SSH.Execute.Title": "Befehl ausführen",
@@ -137,7 +138,7 @@
     "Menu.Clients": "Endgeräte",
     "Menu.Topology": "Topologie",
     "Menu.Vlans": "VLANs",
-    "Menu.Switches": "Switche",
+    "Menu.Switches": "Switches",
     "Menu.System": "Einstellungen",
     "Menu.Logout": "Abmelden",
     "Menu.Usersettings": "Anpassen",
@@ -154,7 +155,7 @@
     "Usersettings": "Benutzereinstellungen",
 
     "Header.Vlans": "VLANs",
-    "Header.Switches": "Switche",
+    "Header.Switches": "Switches",
     "Header.Log": "Log",
     "Sites": "Standorte",
     "Header.Buildings": "Gebäude",
@@ -185,7 +186,7 @@
     "Log.Action": "Aktion",
     "Log.Data": "Daten",
 
-    "Mail.Weekly Backup Report": "Wöchentlicher Bericht Backups Switche",
+    "Mail.Weekly Backup Report": "Backup-Report: Switches",
     "Mail.Success": "Erfolgreich",
     "Mail.Failed": "Fehlgeschlagen",
     "Mail.Switch": "Switch",
