--- a/lang/de.json
+++ b/lang/de.json
@@ -95,7 +95,7 @@
 	"For better client categorizing, please add the most used MAC prefixes here and assign them an icon.": "Fügen Sie hier bitte die am häufigsten verwendeten MAC-Präfixe hinzu und weisen Sie ihnen ein Symbol zu, um die Kategorisierung von Clients zu verbessern.",
 	"For better client discovery, please add all gateways of your network here.": "Fügen Sie hier bitte alle Gateways Ihres Netzwerks hinzu, um eine bessere Client-Erkennung zu ermöglichen.",
 	"General": "Allgemein",
-	"Global settings": "Global Einstellungen",
+	"Global settings": "Einstellungen",
 	"Go to": "Gehe zu",
 	"Has clients": "Hat Clients",
 	"Has no clients": "Hat keine Clients",
